# pico-ir-remote

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  commands.c  commands.h  config.h  custom_config.h  device_mgr.c  device_mgr.h  main.c
lib/: CMakeLists.txt
lib/cli/: CMakeLists.txt  cli.c  cli.h
lib/ir_custom_tx/: CMakeLists.txt  ir_cust_nec_burst.pio  ir_cust_nec_control.pio  ir_cust_tx.c  ir_cust_tx.h
lib/ir_dev_models/: CMakeLists.txt  base.h  starlight_ac.c  starlight_ac.h
lib/ir_proto/: CMakeLists.txt  ir_utils.c  ir_utils.h
lib/ir_proto/nec_custom/: CMakeLists.txt  cust_nec_burst.pio  cust_nec_control.pio  nec_custom_proto.c  nec_custom_proto.h
lib/main/: CMakeLists.txt  commands.c  commands.h  device_mgr.c  device_mgr.h  scheduler.c  scheduler.h  state.h
